Source/WTF/wtf/generic/WorkQueueGeneric.cpp
@@ -36,6 +36,9 @@ namespace WTF {
 
 WorkQueueBase::WorkQueueBase(RunLoop& runLoop)
     : m_runLoop(&runLoop)
+#if ASSERT_ENABLED
+    , m_threadID(mainThreadID)
+#endif
 {
 }
 
@@ -81,12 +84,5 @@ WorkQueue::WorkQueue(MainTag)
     : WorkQueueBase(RunLoop::main())
 {
 }
-
-#if ASSERT_ENABLED
-ThreadLikeAssertion WorkQueue::threadLikeAssertion() const
-{
-    return createThreadLikeAssertion(m_threadID);
-}
-#endif
 
 }
